# ficha-onchain

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  contracts.yml
contracts/: Cargo.toml  README.md
contracts/.cargo/: config.toml
contracts/clinical-record/: Cargo.toml
contracts/clinical-record/src/: lib.rs  test.rs
contracts/dispensary-registry/: Cargo.toml
contracts/dispensary-registry/src/: lib.rs
contracts/dispense-record/: Cargo.toml
contracts/dispense-record/src/: lib.rs
contracts/doctor-registry/: Cargo.toml
contracts/doctor-registry/src/: lib.rs  test.rs
contracts/document-soulbound/: Cargo.toml
contracts/document-soulbound/src/: lib.rs  test.rs
contracts/e2e/: Cargo.toml
contracts/e2e/src/: lib.rs
contracts/e2e/tests/: e2e.rs
contracts/prescription-soulbound/: Cargo.toml
contracts/prescription-soulbound/src/: lib.rs  test.rs
docs/: API.md  ARCHITECTURE.md  CONTRACTS.md  D3_EVIDENCE.md  DATA_MODEL.md  DEMO.md  DEMO_SCRIPT.md  FLUJO_TESTEO.md  PERFILES_DESIGN.md  README.md  SANDBOX_DEPLOY.md  contracts-spec.md
e2e/: demo-doctor.spec.ts  demo-patient.spec.ts  landing.spec.ts  verify.spec.ts
public/models/: body_final.glb
scripts/: db-snapshot.mjs  deploy-sandbox-record.sh  migrate.mjs  seed-demo-journey.mjs  smoke-sandbox-isolation.mjs  test-flow.mjs  test-onchain.mjs
scripts/phases/: lib.mjs  p1-medico.mjs  p2-disponibilidad.mjs  p3-reserva.mjs  p4-consulta.mjs  p5-consentimiento.mjs  p6-receta.mjs  p7-ficha.mjs  p8-documentos.mjs  run.mjs
src/__tests__/: api-key.test.ts  auth-session.test.ts  db-guard.test.ts  fhir.test.ts  prescription-hash.test.ts  privy-email.test.ts  rut-hash.test.ts  serialize.test.ts  verify-url.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/licenses/: page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/admin/doctors/: page.tsx
src/app/admin/flujo/: page.tsx
src/app/admin/historial/: page.tsx
src/app/admin/users/: page.tsx
src/app/admin/waitlist/: page.tsx
src/app/api/appointments/: route.ts
src/app/api/consultations/: route.ts
src/app/api/doctor-status/: route.ts
src/app/api/doctors/: route.ts
src/app/api/documents/: route.ts
src/app/doctor/: layout.tsx  page.tsx
src/app/legal/: page.tsx
src/app/mcp/: page.tsx
src/app/patient/: layout.tsx  page.tsx
src/app/pharmacy/: page.tsx
src/app/traction/: page.tsx
src/app/verify/: page.tsx
src/components/3d/: PatientCard3D.tsx
src/components/auth/: PrivyLoginButton.tsx
src/components/doctor/: ConsultasTab.tsx  DisponibilidadTab.tsx  InicioTab.tsx  LicenciasTab.tsx  Modal.tsx  PacientesTab.tsx  PerfilTab.tsx  RecetasTab.tsx  types.ts
src/components/icons/: HealthIcons.tsx
src/components/landing/: AudienceSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  LegalSection.tsx  Navbar.tsx  ProblemSection.tsx  RoadmapSection.tsx  SectionHeading.tsx  SolutionSection.tsx  WaitlistForm.tsx  WaitlistModal.tsx  WaitlistSection.tsx
src/components/legal/: LegalIcons.tsx
src/components/pain/: BodyMap.tsx  BodyMap3D.tsx  PainLogger.tsx  RegionDetail3D.tsx
src/components/patient/: AppointmentCard.tsx  AppointmentStatusBadge.tsx  EditFichaModal.tsx  EmptyRxState.tsx  ExpiryAlerts.tsx  FichaSection.tsx  LicenseCard.tsx  LoadingList.tsx  PatientLicCard.tsx  ProgressBar.tsx  QrCodeDisplay.tsx  RequestAppointmentForm.tsx  RxCard.tsx  RxPharmacyModal.tsx  SectionHeader.tsx  StatusBadge.tsx  Teleconsultas.tsx  dates.ts  types.ts
src/components/portal/: AccessScreen.tsx  ConsultationPanel.tsx  LicenseCard.tsx  ShareModal.tsx
src/components/prescriptions/: RxStatusBadge.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Reveal.tsx
src/hooks/: useLanguage.ts  usePrivyEmail.ts  useTrackUser.ts
src/lib/: db.ts  decreto41.ts  i18n.ts  metrics.ts  utils.ts
src/lib/auth/: admin.ts  api-key.ts  authed-fetch.ts  privy-auth.ts  privy-email.ts  session.ts  treating.ts  withAuth.ts
src/lib/consultations/: store.ts
src/lib/fhir/: documents.ts  index.ts
src/lib/google/: auth.ts  meet.ts
src/lib/identity/: anchor.ts  center-grants.ts  patient-records.ts  rut.ts
src/lib/passkey/: index.ts
src/lib/privy/: index.ts
src/lib/share/: token.ts  url.ts
src/lib/stellar/: client.ts  config.ts  documents.ts  expiry.ts  index.ts  pharmacy.ts  serialize.ts  server.ts  status.ts
src/providers/: PrivyProvider.tsx
src/types/: health.ts  index.ts  qrcode.d.ts
(+53 files in other folders)
