[package]
name = "clinical-record"
version = "0.1.0"
edition = "2021"
description = "Patient-owned FHIR clinical history anchored on-chain (Phase 1)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
